Add projects, upwork, analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3213587-14"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-3213587-14');
+    </script>
+
     <meta charset="utf-8">
     <title>jjttjj.com</title>
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
@@ -16,10 +26,19 @@
       <li>Clojure/Clojurescript</li>
       <li>q/kdb+</li>
     </ul>
+
+
+    <h2>Projects</h2>
+    <ul>
+      <li><a href="https://github.com/jjttjj/iboga">Iboga</a>: A minimum viable clojure client for Interactive Brokers' API</li>
+      <li><a href="http://qers.net">qers.net</a>: A public slack for q/kdb</li>
+    </ul>
+    
     <h2>Contact</h2>
     <ul>
-      <li>Email: This domain at gmail</li>
+      <li><a href="mailto:jjttjj@gmail.com">jjttjj@gmail.com</li>
       <li><a href="https://github.com/jjttjj">github</li>
+      <li><a href="https://www.upwork.com/freelancers/~01d1a62a613a29482b">upwork</a>
     </ul>
     
   </body>
